--- a/AdventCalendar/wwwroot/index.html
+++ b/AdventCalendar/wwwroot/index.html
@@ -10,9 +10,10 @@
     <link rel="stylesheet" href="css/app.css" />
     <link rel="icon" type="image/png" href="favicon.png" />
     <link href="AdventCalendar.styles.css" rel="stylesheet" />
-    <link href="https://cdnjs.cloudflare.com/ajax/libs/prism/1.29.0/themes/prism.min.css" rel="stylesheet" />
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/prism/1.29.0/prism.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/prism/1.29.0/components/prism-csharp.min.js"></script> 
+
+    <link rel="stylesheet" href="css/prism.css" />
+    <script src="js/prism.js"></script>
+
 </head>
 
 <body>
@@ -30,6 +31,8 @@
         <a class="dismiss">🗙</a>
     </div>
     <script src="_framework/blazor.webassembly.js"></script>
+    <script src="js/prism-init.js"></script>
+
 </body>
 
 </html>
